--- a/phase-0/.gitignore
+++ b/phase-0/.gitignore
@@ -59,7 +59,7 @@ yarn-error.log*
 
 
 # Dependency directories
-node_modules/
+**/node_modules/
 jspm_packages/
 
 # Optional npm cache directory
@@ -87,7 +87,7 @@ jspm_packages/
 lerna-debug.log
 
 # System Files
-.DS_Store
+**/.DS_Store
 Thumbs.db
 
-bundle.js
+**/bundle.js
